test/data/syntax-errors/a-bad-expression-in-assignment.iki
var x: int;
x = while + 2;
